<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityUm">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:background="@color/colorPrimary"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textStyle="bold"
        android:background="@color/colorPrimary"/>

    <RadioGroup
        android:id="@+id/rgSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtnMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"/>

        <RadioButton
            android:id="@+id/rbtnFeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feminino"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/btnExibir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exibir"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"/>

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"/>
    </LinearLayout>

    <TextView
    android:id="@+id/showNome"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"/>

    <TextView
        android:id="@+id/showSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/btnAvancarLayoutDois"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avancar"/>

    <Button
        android:id="@+id/btnVoltarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voltar"/>
</LinearLayout>